--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       font-family: Roboto, sans-serif;
     }
   </style>
-  <body>
+  <body style="margin: 0">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
