update mui-theme-manager, add umami

--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>portfolio-analyzer-client</title>
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="806d162d-58e8-4a42-a7b8-a87351aadc8b"></script>
   </head>
   <style>
     html, body, #root {
